solution day 2 part 2